# cloudresearch-connect-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tism/crconnect/: __init__.py  account.py  assignments.py  base.py  demographics.py  project.py
